# Specify package name, version, bug report URL, tar name, and URL
AC_INIT([GENI Account Request], [1.9],
        [https://github.com/GENI-NSF/geni-ar/issues], [geni-ar],
	[https://github.com/GENI-NSF/geni-ar])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AM_MAINTAINER_MODE([enable])
AC_PROG_MKDIR_P
AC_PROG_INSTALL
AC_CONFIG_FILES([Makefile doc/Makefile])
AC_OUTPUT
