## Process this file with automake to produce Makefile.in

nobase_dist_pkgdata_DATA = \
	apache2.conf \
	www/request.html \
	www/handlerequest.php \
	protected/display_requests.php \
	protected/approve_request.php \
	protected/index.html \
	protected/ldap.php \
	lib/php/db_utils.php \
	lib/php/geni_syslog.php \
	lib/php/response_format.php \
	lib/php/ar_constants.php \
	db/postgresql/schema.sql

dist_sbin_SCRIPTS = \
	bin/idp_user_created.sh \
	bin/shib_idp_users

pkgsysconfdir = $(sysconfdir)/$(PACKAGE_NAME)

dist_pkgsysconf_DATA = \
	etc/example-settings.php
